# DjVuLibreExperimental

./: .gitignore  CMakeLists.txt  Makefile.am  README  README.md  configure.ac  run_clang_tidy_libdjvu.ps1  run_windows_tests.ps1
.github/workflows/: ci-manual.yml  ci.yml  linux-build.yml  linux-manual.yml  windows-build.yml  windows-manual.yml
cmake/: DjVuLibreConfig.cmake.in  DjVuThirdParty.cmake  config.h.in  ddjvuapi.pc.in
debian/: changelog  clean  control  libdjvulibre-dev.docs  rules
desktopfiles/: CMakeLists.txt
doc/: TODO-dependency-modernization.md
doc/refactoring/: fixture_generation_notes.md  potential_issues.md  test_integration_audit.md
docs/: test_integration_audit.md
libdjvu/: BSByteStream.cpp  BSEncodeByteStream.cpp  ByteStream.cpp  CMakeLists.txt  DataPool.cpp  DjVmDir.cpp  DjVmDoc.cpp  DjVmNav.cpp  DjVuAnno.cpp  DjVuDocEditor.cpp  DjVuDocument.cpp  DjVuFile.cpp  DjVuImage.cpp  DjVuInfo.cpp  DjVuMessage.cpp  DjVuMessageLite.cpp  DjVuText.cpp  DjVuToPS.cpp  GBitmap.cpp  GException.cpp  GIFFManager.cpp  GSmartPointer.h  GString.cpp  GURL.cpp  GUnicode.cpp  IFFByteStream.cpp  JPEGDecoder.cpp  MMRDecoder.cpp  UnicodeByteStream.cpp  XMLTags.cpp  ddjvuapi.cpp  miniexp.cpp
patches/libjpeg-turbo/: 0001-local-build-integration.patch
patches/tiff/: 0001-local-build-integration.patch
patches/zlib/: 0001-local-build-integration.patch
scripts/: bootstrap_wsl.sh  run_windows_tests.ps1  run_wsl_tests.ps1
share/: CMakeLists.txt
tests/: CMakeLists.txt  Makefile.am  libdjvu_gtest.cpp  libdjvu_smoke_test.cpp
tests/fixtures/: generate_djvu_fixtures.md  generate_djvu_fixtures.py
tests/fixtures/reference/: SHA256SUMS.txt  legacy_oldbundled.djvu  manifest.txt  mp2_bundled.djvu  mp2_bundled_shared_resources.djvu  mp3_bundled_mixed_layers.djvu  sp_anno_only_links.djvu  sp_bg_fgtext.djvu  sp_bg_fgtext_hidden.djvu  sp_bg_fgtext_hidden_links.djvu  sp_bg_only_large.djvu  sp_bw_mask_heavy.djvu  sp_hidden_only_no_visible.djvu  sp_links_edgecases.djvu  sp_palette_indexed_bg.djvu  sp_rotation_180.djvu  sp_rotation_270.djvu  sp_rotation_90.djvu  sp_unicode_hidden.djvu  sp_utf8_multilang_hidden.djvu
tests/fixtures/reference/legacy_oldindexed/: directory.djvi  page1.djvu  page2.djvu
tests/fixtures/reference/mp2_indirect/: index.djvu  mp2_page1.djvu  mp2_page2.djvu
tests/fixtures/reference/mp3_indirect_mixed_layers/: index.djvu  mp3_page1.djvu  mp3_page2.djvu  mp3_page3.djvu
tests/gtest/: WINDOWS_NONLINKING.md  test_arrays.cpp  test_atomic.cpp  test_bsbytestream.cpp  test_bsencodebytestream.cpp  test_byte_stream.cpp  test_bytestream_extra.cpp  test_codecs_converters.cpp  test_datapool.cpp  test_datapool_triggers.cpp  test_ddjvuapi.cpp  test_debug.cpp  test_djvmdir.cpp  test_djvmdir0.cpp  test_djvmdoc.cpp  test_djvmnav.cpp  test_djvuanno.cpp  test_djvudoceditor.cpp  test_djvudocument.cpp  test_djvudocument_extra.cpp  test_djvudumphelper.cpp  test_djvuerrorlist.cpp  test_djvufile.cpp  test_djvufilecache.cpp  test_djvuglobal.cpp  test_djvuglobalmemory.cpp  test_djvuimage.cpp  test_djvuinfo.cpp  test_djvumessage.cpp  test_djvumessagelite.cpp  test_djvunavdir.cpp  test_djvupalette.cpp  test_djvuport.cpp  test_djvusimpleport.cpp  test_djvutext.cpp  test_djvutops_options.cpp  test_djvutops_print.cpp  test_garray_edge_ops.cpp  test_gbitmap.cpp  test_gcontainer.cpp  (+53 more)
tools/: CMakeLists.txt  ddjvu.cpp  tiff2pdf.c  tiff2pdf.h
windows/djvulibre/: djvulibre-install.sh  djvulibre.sln  strict_warnings.props
windows/djvulibre/bzz/: bzz.vcxproj
windows/djvulibre/c44/: c44.vcxproj
windows/djvulibre/cjb2/: cjb2.vcxproj
windows/djvulibre/cpaldjvu/: cpaldjvu.vcxproj
windows/djvulibre/csepdjvu/: csepdjvu.vcxproj
windows/djvulibre/ddjvu/: ddjvu.vcxproj
windows/djvulibre/djvm/: djvm.vcxproj
windows/djvulibre/djvmcvt/: djvmcvt.vcxproj
windows/djvulibre/djvudump/: djvudump.vcxproj
windows/djvulibre/djvuextract/: djvuextract.vcxproj
windows/djvulibre/djvumake/: djvumake.vcxproj
windows/djvulibre/djvups/: djvups.vcxproj
windows/djvulibre/djvused/: djvused.vcxproj
windows/djvulibre/djvuserve/: djvuserve.vcxproj
windows/djvulibre/djvutoxml/: djvutoxml.vcxproj
windows/djvulibre/djvutxt/: djvutxt.vcxproj
windows/djvulibre/djvuxmlparser/: djvuxmlparser.vcxproj
windows/djvulibre/libdjvu_gtest/: libdjvu_gtest.vcxproj  libdjvu_gtest.vcxproj.filters
windows/djvulibre/libdjvu_smoke_test/: libdjvu_smoke_test.vcxproj  libdjvu_smoke_test.vcxproj.filters
windows/djvulibre/libdjvulibre/: libdjvulibre.vcxproj
windows/djvulibre/libjpeg/: libjpeg.vcxproj
windows/djvulibre/libtiff/: libtiff.vcxproj
windows/djvulibre/libz/: libz.vcxproj
xmltools/: CMakeLists.txt
